Bugfix: Updates: Fix UnsupportedOperationException.